--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^2.5.2",
     "vue-multiselect": "^2.1.0",
     "vue-router": "^3.0.1",
-    "vue-session": "^1.0.0"
+    "vue-session": "^1.0.0",
+    "vue2-datepicker": "^2.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -44,7 +45,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
+    "url-loader": "^1.1.1",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
