--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "semantic-ui-css": "^2.4.0",
+    "semantic-ui-vue": "^0.5.0",
     "vue": "^2.5.2",
     "vue-multiselect": "^2.1.0",
     "vue-router": "^3.0.1",
